Show language of "see other" references in search

--- a/src/main/webapp/general/test.html
+++ b/src/main/webapp/general/test.html
@@ -158,15 +158,77 @@
 
 <hr/>
 
-The alphabet above had been given in its most archaic {and} (somewhat pre-classical) form. The following modifications (mainly the result of sound changes) occurred in the classical form. (Other later or incorrect forms, due to the recognition of Tarquesta pronunciations, will be noted below).
-<p>{In all correct classical spelling the distinction between <span class="tengwar">3</span> <i>th</i> (<i>þ</i>) and <span class="tengwar">8</span> is maintained. But the distinction between <span class="tengwar">k</span> <i>z</i> and <span class="tengwar">6</span> disappeared before the classical period; hence <span class="tengwar">6</span> replaced <span class="tengwar">k</span>. The latter was then used = <i>ss</i>. &gt;&gt;}</p>
-<p>In all correct classical spelling the distinction between <span class="tengwar">3</span> <i>th</i> (<i>þ</i>), <span class="tengwar">8 k</span> <i>z</i> is maintained. But the distinction between them disappeared after the classical period in TQ pronunciation; hence <span class="tengwar">k</span> was {then &gt;&gt;} later used = <i>ss</i>.</p>
-<p>Initial <span class="tengwar">d</span> [h] = [χ] became already in the classical period breath <i>h</i>. It is thus permissible to use <span class="tengwar">½</span> = <span class="tengwar">d</span> initially (only). But the better use is <span class="tengwar">d</span> throughout.</p>
-<p><span class="tengwar">h</span> was devised for [ʒ]: vanishing remains of CE <i>g</i>, which {in early classical &gt;&gt;} in the early classical period still remained as [’], clear beginning initially. But this early vanished and in best classical use <span class="tengwar">h</span> is no longer employed. (The use of <span class="tengwar">h</span> as fuller form of <span class="tengwar">` ゼ</span> (short carrier), espec. in expressing diphthongs as <span class="tengwar">hÕ hé</span>, and as initial form as <span class="tengwar">h1[</span> = <i>atta</i>, <span class="tengwar">h^A</span> = <i>ohta</i>, may be noted.)</p>
-<blockquote>When the clear beginning requires denoting as in <i>e·anta</i> “he gives”, it is marked  by raised dot or stroke <span class="tengwar">`V=ゼ4</span> = <i>e·anta</i>.</blockquote>
-<p>The sound <i>zd</i> present in earliest period became before classical period <i>st</i> (together with <i>zg</i> &gt; <i>sk/ks</i>; <i>zb</i> &gt; <i>sp/ps</i>; <i>bb, dd, gg</i> &gt; <i>pp, tt, kk</i>). Hence the letters <span class="tengwar">@</span> = <i>zd</i>, <span class="tengwar">W</span> = <i>zb</i>, <span class="tengwar">S</span> = <i>zg</i> fell out of use.</p>
+Quenya Consonants.
+<p>The Quendian grammarians, as reported by Ælfwine, analyzed the elementary consonantal sounds of Qenya and arranged them in approximately phonetic order.*</p>
+<blockquote>*For such purposes they used the alphabet of Rúmil, or the general phonetic form of the alphabet of Feanor. In the table here given the normal transcription adopted for Qenya is used in preference to special or more exact phonetic signs.</blockquote>
+<p>A similar table, using the transcriptions as above, may be given thus.</p>
+<center><p>
+<table>
+<tr>
+<td></td>
+<td>(a) Labial<br/>p-series</td>
+<td>(b) dental<br/>t-series</td>
+<td>(c) front<br/>ty-series</td>
+<td>(d) back<br/>k-series</td>
+<td>(e) back-labial<br/>q-series</td>
+</tr>
+<tr>
+<td>1. Voiceless Stops</td>
+<td><i>p</i>.</td>
+<td><i>t</i>.</td>
+<td><i>ty</i>.</td>
+<td><i>k</i>.</td>
+<td><i>q</i>.</td>
+</tr>
+<tr>
+<td>2. Voiced Stops</td>
+<td>[<i>b</i>]</td>
+<td>[<i>d</i>]</td>
+<td>[<i>dy</i>]</td>
+<td>[<i>g</i>]</td>
+<td>[<i>gw</i>]</td>
+</tr>
+<tr>
+<td>3. Voiceless Spirants</td>
+<td><i>f</i>.</td>
+<td><i>s</i>.</td>
+<td><i>hy</i>.</td>
+<td><i>h</i>.</td>
+<td><i>hw</i>.</td>
+</tr>
+<tr>
+<td>4. Voiced Spirants</td>
+<td colspan="5"><i>v</i>.</td>
+</tr>
+<tr>
+<td>5. Sonants</td>
+<td><i>w</i>.</td>
+<td><i>l, r</i>.</td>
+<td><i>y</i>.</td>
+<td></td>
+<td><i>w</i>.</td>
+</tr>
+<tr>
+<td>6. Nasal Sonants<br/>(nasals)</td>
+<td><i>m</i>.</td>
+<td><i>n</i>.</td>
+<td><i>ny</i>.</td>
+<td><i>ng</i>. [= ŋ]</td>
+<td><i>ngw</i>. [= ŋw]</td>
+</tr>
+<tr>
+<td></td>
+<td colspan="5">In addition the voiceless breath or aspirate <i>h</i>.</td>
+</tr>
+<tr>
+</table>
+</p></center>
+<p>The consonants enclosed in [ ] do not in Qenya occur initially or alone, but only in certain medial combinations: <i>b</i> in <i>mb</i>; <i>d</i> in <i>lr, rd, nd</i>; <i>dy</i> in <i>ndy</i>; <i>g</i> in <i>ng</i> [= ŋg]; <i>gw</i> in <i>ng</i> [= ŋgw].</p>
+<p>The consonants of the <i>ty</i>-series and <i>q</i>-series are all, except <i>y, w,</i> not simple consonants in origin, and <i>ty, ny, q, ngw</i> [= ŋw] are not actually strictly simple consonants in pronunciation, though they can stand initially where Qenya does not tolerate actual consonant groups. See further under phonetic description.</p>
 
 <br/><br/>
+
+–
 
 (6) The dot or point below was still used ([added] even in later use with express vowels), where a consonant was not followed by any vowel, i.e. finally and before another consonant. It was chiefly used in case of final <span class="tengwar">5(</span> <i>n</i>, <span class="tengwar">jL</span> <i>l</i>, <span class="tengwar">1O</span> <i>t</i>, <span class="tengwar">*O</span> <i>s</i>. [r] had 2 forms of which <span class="tengwar">7</span> was used only of vowelless form. The chief combinations to possess no special sign were {[l, r] + <i>t, p, k, q, m</i> and [rn] &gt;&gt;} [l, r] + <i>p, t, k, f, þ, h, ty</i> and [rn], also <i>sp sk</i> rare in pure Q. Here <span class="tengwar">7</span> and <span class="tengwar">jL</span> (sometimes <span class="tengwar" style="font-size: 0.6em; vertical-align: 15%">jL</span>) were used as <span class="tengwar">`jLt</span> = <i>alma</i>. Special combinations had to be provided for [rd], [ld] as no sign for uncombined [d] existed. Inflexional final <i>s</i> was often expressed by the hook <span class="tengwar">&#160;&#162;</span>, as <span class="tengwar">a&#162;</span> = <i>kas</i>.
 
