--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -14,6 +14,7 @@
 <ul>
 <li>The first code release of Eldamo, with the system used to generate the Eldamo site.</li>
 <li>More data entry for PE22.</li>
+<li>More Noldorin name analysis.</li>
 </ul>
 <p>v0.4.9 (August 29, 2015)</p>
 <ul>
