--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -12,9 +12,10 @@
 <h1>Version History</h1>
 <p>v0.5.0</p>
 <ul>
-<li>The first code release of Eldamo, with the system used to generate the Eldamo site.</li>
+<li>The first code release of Eldamo: the system used to generate the Eldamo site.</li>
+<li>Quenya cleanup on individual entries.</li>
+<li>Finished Noldorin name analysis.</li>
 <li>More data entry for PE22.</li>
-<li>More Noldorin name analysis.</li>
 </ul>
 <p>v0.4.9 (August 29, 2015)</p>
 <ul>
