--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,14 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.5.0</p>
+<p>v0.5.1</p>
+<ul>
+<li>Finished Middle Quenya name analysis.</li>
+<li>Reviewed Noldorin name descriptions.</li>
+<li>Organized Quenya grammatical entries.</li>
+<li>More data entry for PE22.</li>
+</ul>
+<p>v0.5.0 (September 19, 2015)</p>
 <ul>
 <li>The first code release of Eldamo: the system used to generate the Eldamo site.</li>
 <li>Quenya cleanup on individual entries.</li>
