--- a/src/main/webapp/search.html
+++ b/src/main/webapp/search.html
@@ -15,7 +15,7 @@
     &nbsp;<select id="langSelect" onchange="doSearch()">
        <option value="">All Languages</option>
        <option value="eq|mq|q">All Quenya</option>
-       <option value="g|n|s">Sindarin/Noldorin/Gnomish</option>
+       <option value="g|en|n|s">Sindarin/Noldorin/Gnomish</option>
     </select> &nbsp;|
     <input id="noNamesBox" type="checkbox" onclick="doSearch()" /> No Names &nbsp;|
     &nbsp;<button id="firstButton" onclick="goFirst()">&lt;&lt;</button>
