--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,13 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.5.1</p>
+<p>v0.5.2</p>
+<ul>
+<li>Tengwar transcriptions using Benjamin Babut’s <a href="https://github.com/BenTalagan/glaemscribe">Glǽmscribe library</a>.</li>
+<li>Corrected Karnigul &gt;&gt; Karningul as suggested by <a href="https://github.com/pfstrack/eldamo/issues/2">Tyelpion</a>.</li>
+<li>More data entry for PE22.</li>
+</ul>
+<p>v0.5.1 (March 19, 2016)</p>
 <ul>
 <li>Finished Middle Quenya name analysis.</li>
 <li>Reviewed Noldorin name descriptions.</li>
