--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,18 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.5.2</p>
+<p>v0.5.3</p>
+<ul>
+<li>Began Early Quenya name analysis.</li>
+<li>Reviewed Middle Quenya name descriptions.</li>
+<li>Finished data entry for PE22.</li>
+<li>Clean up of XSD schema definitions</li>
+<li>Fixed several proper names as suggested by <a href="https://github.com/pfstrack/eldamo/issues/3">Ostesor</a></li>
+<li>Fixed <i>lungo</i> and <i>par-</i> as suggested by <a href="https://github.com/pfstrack/eldamo/issues/4">JPRidgeway</a></li>
+<li>Fixed <i>to</i> preposition as suggested by <a href="https://github.com/pfstrack/eldamo/issues/6">Tamas Ferencz</a></li>
+<li>Fixed various data validation issues as suggested by <a href="https://github.com/pfstrack/eldamo/issues/7">Severin Zahler</a></li>
+</ul>
+<p>v0.5.2 (April 1, 2016)</p>
 <ul>
 <li>Tengwar transcriptions using Benjamin Babut’s <a href="https://github.com/BenTalagan/glaemscribe">Glǽmscribe library</a>.</li>
 <li>Corrected Karnigul &gt;&gt; Karningul as suggested by <a href="https://github.com/pfstrack/eldamo/issues/2">Tyelpion</a>.</li>
