--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,15 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.5.3</p>
+<p>v0.5.4</p>
+<ul>
+<li>Updated to the latest version of <a href="https://github.com/BenTalagan/glaemscribe">Glǽmscribe</a>.</li>
+<li>Finished data entry for PE12 (raw data only still needs to be compiled into phonetic rules).</li>
+<li>Resumed data entry for PE14.</li>
+<li>More Early Quenya name analysis.</li>
+<li>Various corrections as suggested by <a href="https://plus.google.com/u/0/102182311550234423672/posts/dx2yzJXndVM?sfc=false">Severin Zahler</a></li>
+</ul>
+<p>v0.5.3 (January 15, 2017)</p>
 <ul>
 <li>Began Early Quenya name analysis.</li>
 <li>Reviewed Middle Quenya name descriptions.</li>
@@ -112,7 +120,7 @@
 <li>Finished language summaries.</li>
 <li>Finished Sindarin name analysis.</li>
 <li>Finished Gnomish Lexicon entries.</li>
-<li>Finished review Quenya name descriptions.</li>
+<li>Finished review of Quenya name descriptions.</li>
 <li>Began review of Sindarin name descriptions.</li>
 </ul>
 <p>v0.1.1 (February 1, 2015)</p>
