--- a/src/main/webapp/general/terminology-and-notations.html
+++ b/src/main/webapp/general/terminology-and-notations.html
@@ -65,9 +65,9 @@
 <p><b>Additions and Deletions</b></p>
 <ul>
 <li>[brackets] mark editorial additions to original texts, both those of other authors and my own</li>
-<li><strike>strike-through</strike> marks words deleted by Tolkien from the original text</li>
+<li><span class="deleted">strike-through</span> marks words deleted by Tolkien from the original text</li>
 <li>{braces} also marks deletions from original texts, where a strike-through would be unclear</li>
-<li><span class="deleted-section">dash-underline</span> marks words appearing in a deleted section, where the word itself was not specifically rejected</li>
+<li><span class="deleted-section">double braces</span> marks words and glosses appearing in a deleted section, where the word itself was not specifically rejected</li>
 </ul>
 <p><b>Phonetic Notations</b></p>
 <ul>
