--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,15 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.5.4</p>
+<p>v0.5.5</p>
+<ul>
+<li>Changed marker for words in a deleted section to {{double braces}}.</li>
+<li>Added a “Parts of Speech” filter to Search page, as suggested by Tamas Ferencz. This replaced the old “No Names” checkbox.</li>
+<li>Cleaned up schema validations for inflections.</li>
+<li>Finished data entry for PE14.</li>
+<li>Finished Early Quenya name analysis.</li>
+</ul>
+<p>v0.5.4 (February 20, 2017)</p>
 <ul>
 <li>Updated to the latest version of <a href="https://github.com/BenTalagan/glaemscribe">Glǽmscribe</a>.</li>
 <li>Finished data entry for PE12 (raw data only still needs to be compiled into phonetic rules).</li>
@@ -58,7 +66,7 @@
 <p>v0.4.8 (July 24, 2015)</p>
 <ul>
 <li>First release on Github.</li>
-<li>Formal schema specifications for Eldamo data model.</li>
+<li>Formal schema specifications for Eldamo data model, based on the work of G. Hussain Chinoy.</li>
 <li>Began data entry for Early Qenya Phonology (PE12/3-28).</li>
 <li>Began data entry for PE14.</li>
 <li>More Noldorin name analysis.</li>
