--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,13 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.5.5</p>
+<p>v0.5.6</p>
+<ul>
+<li>Finished data entry for PE15.</li>
+<li>Began Early Quenya phonetic analysis.</li>
+<li>Reviewed Early Quenya name descriptions.</li>
+</ul>
+<p>v0.5.5 (April 15, 2017)</p>
 <ul>
 <li>Changed marker for words in a deleted section to {{double braces}}.</li>
 <li>Added a “Parts of Speech” filter to Search page, as suggested by Tamas Ferencz. This replaced the old “No Names” checkbox.</li>
