--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,14 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.5.6</p>
+<p>v0.5.7</p>
+<ul>
+<li>More schema cleanup.</li>
+<li>Finished data entry for Monsters and the Critics.</li>
+<li>Began data entry for PE16.</li>
+<li>More Early Quenya phonetic analysis.</li>
+</ul>
+<p>v0.5.6 (June 23, 2017)</p>
 <ul>
 <li>Finished data entry for PE15.</li>
 <li>Began Early Quenya phonetic analysis.</li>
