--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -14,7 +14,7 @@
 <ul>
 <li>More schema cleanup.</li>
 <li>Finished data entry for Monsters and the Critics.</li>
-<li>Began data entry for PE16.</li>
+<li>Finished data entry for PE16.</li>
 <li>More Early Quenya phonetic analysis.</li>
 </ul>
 <p>v0.5.6 (June 23, 2017)</p>
