--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,12 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.5.7</p>
+<p>v0.5.8</p>
+<ul>
+<li>Data entry for PE21.</li>
+<li>More Early Quenya phonetic analysis.</li>
+</ul>
+<p>v0.5.7 (August 20, 2017)</p>
 <ul>
 <li>More schema cleanup.</li>
 <li>Finished data entry for Monsters and the Critics.</li>
