--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,11 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.5.8</p>
+<p>v0.5.9</p>
+<ul>
+<li>Data entry for PE18.</li>
+</ul>
+<p>v0.5.8 (November 11, 2017)</p>
 <ul>
 <li>Data entry for PE21.</li>
 <li>More Early Quenya phonetic analysis.</li>
