--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,13 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.5.9</p>
+<p>v0.6.0</p>
+<ul>
+<li>Clean up old and out-dated phonetic artifacts.</li>
+<li>Most of the remaining data entry for PE19.</li>
+<li>First beta release!</li>
+</ul>
+<p>v0.5.9 (December 9, 2017)</p>
 <ul>
 <li>Data entry for PE18.</li>
 </ul>
