First pass changes to support Neo-Languages

--- a/src/main/webapp/general/terminology-and-notations.html
+++ b/src/main/webapp/general/terminology-and-notations.html
@@ -53,13 +53,14 @@
 <li>Detailed references have a decimal notation, usually indicating line and word position on a page: LotR/1117.1405 (line 14, word 5)</li>
 <li>A full set of reference abbreviations can be found in the <a href="../content/references/index.html">References Index</a>.</li>
 </ul>
-<p><b>Reliability Markers</b></p>
+<p><a name="reliability-markers"></a><b>Reliability Markers</b></p>
 <ul>
 <li>Words attested in Tolkien’s writing are generally unmarked and followed by a reference (Abbr/Page)</li>
-<li># marks words that can derived from attested words via well-known grammatical rules</li>
-<li>* marks words that are unattested but can be reasonably deduced by comparison to other words</li>
+<li># marks words that can derived from attested words via grammatical rules or as elements of compounds</li>
+<li>* marks words that are reconstructed but can be reasonably deduced by comparison to other words</li>
+<li>^ marks words that are reformulated from early versions of the languages to fit the structure of later languages</li>
 <li>? marks words that are more speculative, but still deduced from original source material</li>
-<li>! marks words that are fabrications and inventions by authors other than Tolkien</li>
+<li>! marks words that are pure neologisms: fabrications and inventions by authors other than Tolkien</li>
 <li>‽ (interobang) is used where Tolkien himself wrote a “?” in the source material</li>
 </ul>
 <p><b>Additions and Deletions</b></p>
