--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,15 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.6.0</p>
+<p>v0.6.1</p>
+<ul>
+<li>Cleanup usage of word reliability markers.</li>
+<li>Introduced Neo-Quenya (ᴺQ), Neo-Sindarin (ᴺS), and Neo-Primitive (ᴺ✶) languages.</li>
+<li>Changed North Sindarin code/abbreviation from "ns/NS" to "norths/North S." to better distinguish it from Neo-Sindarin.</li>
+<li>TBD: Created alternate "neo" navigation for walking through Neo-languages.</li>
+<li>TBD: Began Quenya phonetic analysis.</li>
+</ul>
+<p>v0.6.0 (December 29, 2017)</p>
 <ul>
 <li>Clean up old and out-dated phonetic artifacts.</li>
 <li>Most of the remaining data entry for PE19.</li>
