Second pass changes to support Neo-Languages

--- a/src/main/webapp/general/terminology-and-notations.html
+++ b/src/main/webapp/general/terminology-and-notations.html
@@ -35,6 +35,7 @@
 <li>Unmarked languages that span multiple periods are late forms: Q. = Late Quenya</li>
 <li>Languages that appear primarily in a single period have no period marker for that period: N. = Noldorin (Middle Period)</li>
 <li>ᴸ superscript marks Late Period forms of earlier languages: ᴸN = Late Noldorin</li>
+<li>ᴺ superscript marks Neo-Language constructions by authors other than Tolkien, e.g. Neo-Quenya (ᴺQ.) or Neo-Sindarin (ᴺS.)</li>
 </ul>
 <p><b>Derivation Notations</b></p>
 <ul>
@@ -55,13 +56,21 @@
 </ul>
 <p><a name="reliability-markers"></a><b>Reliability Markers</b></p>
 <ul>
-<li>Words attested in Tolkien’s writing are generally unmarked and followed by a reference (Abbr/Page)</li>
+<li>Words directly attested in Tolkien’s writing are unmarked and followed by a reference (Abbr/Page)</li>
 <li># marks words that can derived from attested words via grammatical rules or as elements of compounds</li>
 <li>* marks words that are reconstructed but can be reasonably deduced by comparison to other words</li>
 <li>^ marks words that are reformulated from early versions of the languages to fit the structure of later languages</li>
 <li>? marks words that are more speculative, but still deduced from original source material</li>
-<li>! marks words that are pure neologisms: fabrications and inventions by authors other than Tolkien</li>
 <li>‽ (interobang) is used where Tolkien himself wrote a “?” in the source material</li>
+<li>! marks words that are pure neologisms: fabrications and inventions by authors other than Tolkien</li>
+<li>⚠️ marks words that are not recommended (by this lexicon) for Neo-Quenya or Neo-Sindarin writing️</li>
+</ul>
+<p>Glosses may also have reliability markers.</p>
+<ul>
+<li>* marks “reconstructed” glosses, usually English synonyms that better illustrate the connotation of a word</li>
+<li>? marks more speculative reconstructed glosses</li>
+<li>! marks glosses that are extensions of the meaning of Tolkien’s by other authors</li>
+<li>⚠️ marks glosses that are not recommended (by this lexicon) for Neo-Quenya or Neo-Sindarin writing️</li>
 </ul>
 <p><b>Additions and Deletions</b></p>
 <ul>
