--- a/src/main/webapp/general/elvish-fonts.html
+++ b/src/main/webapp/general/elvish-fonts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta><meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
     <meta http-equiv="Content-Style-Type" content="text/css">
     <title>Eldamo : Elvish Fonts</title>
     <link rel="stylesheet" type="text/css" href="../css/global.css">
