More search tweaks

--- a/src/main/webapp/general/getting-started.html
+++ b/src/main/webapp/general/getting-started.html
@@ -30,25 +30,25 @@
 <p>Of the two major Elvish languages, the “High Elvish” language of Quenya was more completely described by Tolkien, and I feel that it is more accessible to beginners. However, many students of Tolkien’s languages are more interested in learning Sindarin despite its added complexity, since it was the Elvish language more commonly spoken in Middle Earth and more prevalent (for example) in Peter Jackson’s <i>Lord of the Rings</i> and <i>Hobbit</i> movies.</p>
 <p>Once you have a basic understanding of the grammar of the Elvish languages, you can use the vocabulary in this lexicon as a source of words for new Elvish compositions:</p>
 <ul>
-   <li><b><a href="../content/word-indexes/words-q.html">Quenya Words</a></b>
-   <li><b><a href="../content/word-indexes/words-s.html">Sindarin Words</a></b>
+   <li><b><a href="../content/word-indexes/words-nq.html">(Neo) Quenya Words</a></b>
+   <li><b><a href="../content/word-indexes/words-ns.html">(Neo) Sindarin Words</a></b>
 </ul>
 <p>There are a few things to consider when using Elvish vocabulary from these or other Elvish word lists. First, Tolkien worked on the Elvish languages throughout his life, and was constantly revising the grammar, vocabulary and linguistic history of the languages. This lexicon divides Tolkien’s languages into three conceptual periods: Early, Middle and Late (sometimes called “Mature” Elvish by other authors). If you are concerned with consistency, you should take care when mixing vocabulary from different time periods, since Tolkien’s shifting conceptions of his languages could render words from earlier periods invalid according to the rules and phonology of later versions of the languages:</p>
 <center>
 <table>
 <tr><th>Period</th><th>High Elvish</th><th>Common Elvish</th></tr>
 <tr>
-<td>Early (roughly 1910-1930)</td>
+<td>Early (1910-1930)</td>
 <td><a href="../content/language-pages/lang-eq.html">Early Qenya</a></td>
 <td><a href="../content/language-pages/lang-g.html">Gnomish</a></td>
 </tr>
 <tr>
-<td>Middle (roughly 1930-1950)</td>
+<td>Middle (1930-1950)</td>
 <td><a href="../content/language-pages/lang-mq.html">Middle Qenya</a></td>
 <td><a href="../content/language-pages/lang-n.html">Noldorin</a></td>
 </tr>
 <tr>
-<td>Late (roughly 1950-1973)</td>
+<td>Late (1950-1973)</td>
 <td><a href="../content/language-pages/lang-q.html">Late Quenya</a></td>
 <td><a href="../content/language-pages/lang-s.html">Sindarin</a></td>
 </tr>
@@ -59,8 +59,8 @@
 <li>Use your browser’s search function in the word lists to locate an appropriate English word, considering that there may be multiple Elvish words that match a given English word, and that you may need to search for similar words if you cannot find an exact match.</li>
 <li>Look at the semantic categorization of Elvish words, which group Elvish words with similar meanings together (TBD - semantic categorization is currently a work in progress).
 <ul>
-   <li><b><a href="../content/category-indexes/categories-q.html">Quenya Semantic Categories</a></b>
-   <li><b><a href="../content/category-indexes/categories-s.html">Sindarin Semantic Categories</a></b>
+   <li><b><a href="../content/category-indexes/categories-nq.html">Quenya Semantic Categories</a></b>
+   <li><b><a href="../content/category-indexes/categories-ns.html">Sindarin Semantic Categories</a></b>
 </ul>
 </li>
 <li>Use the <b><a href="../content/search/search.html">Search</a></b> feature of the lexicon.</li>
@@ -70,6 +70,7 @@
 <ul>
    <li><b>Quenya</b> - Helge Fauskanger’s <i><a href="http://folk.uib.no/hnohf/wordlists.htm">Quettaparma Quenyallo</a></i></li>
    <li><b>Sindarin</b> - Didier Willis’s <i><a href="http://www.jrrvf.com/hisweloke/sindar/online/english.html">Sindarin Dictionary</a></i></li>
+   <li><b>Both Languages</b> - Leonard W’s <i><a href="http://elfdict.com">Parf Edhellen</a></i></li>
 </ul>
 <p>Better yet, look at the original source material and formulate your own opinions on the meaning of Elvish words. Both this lexicon and the ones listed above have extensive references to Tolkien’s writings indicating the contexts in which various Elvish words originally appeared.</p>
 </body>
