--- a/src/main/webapp/general/conceptual-history.html
+++ b/src/main/webapp/general/conceptual-history.html
@@ -55,7 +55,7 @@
 <td>Quenya</td>
 </tr>
 <tr>
-<td><i>&#160;&#160;&#160;&#160;&#160;Spoken by:</i></td>
+<td><i>Spoken by:</i></td>
 <td>1st tribe only</td>
 <td>1st tribe only</td>
 <td>Vanyar and Noldor</td>
@@ -67,7 +67,7 @@
 <td>Sindarin</td>
 </tr>
 <tr>
-<td><i>&#160;&#160;&#160;&#160;&#160;Spoken by:</i></td>
+<td><i>Spoken by:</i></td>
 <td>Noldoli</td>
 <td>Noldor</td>
 <td>Elves of Beleriand</td>
