--- a/src/main/webapp/general/terminology-and-notations.html
+++ b/src/main/webapp/general/terminology-and-notations.html
@@ -64,12 +64,14 @@
 <li>‽ (interobang) is used where Tolkien himself wrote a “?” in the source material</li>
 <li>! marks words that are pure neologisms: fabrications and inventions by authors other than Tolkien</li>
 <li>⚠️ marks words that are not recommended (by this lexicon) for Neo-Quenya or Neo-Sindarin writing️</li>
+<li>⛔️ marks words that most authors would recommend against using (generally early or deleted words with clear replacements)</li>
 </ul>
 <p>Glosses may also have reliability markers.</p>
 <ul>
-<li>* marks “reconstructed” glosses, usually English synonyms that better illustrate the connotation of a word</li>
+<li>* marks “reconstructed” glosses, usually deduced from context or cognates from other language, or English synonyms
+that better illustrate the particular connotations of a word</li>
 <li>? marks more speculative reconstructed glosses</li>
-<li>! marks glosses that are extensions of the meaning of Tolkien’s by other authors</li>
+<li>! marks unsupported extensions of the Tolkien’s glosses by other authors</li>
 <li>⚠️ marks glosses that are not recommended (by this lexicon) for Neo-Quenya or Neo-Sindarin writing️</li>
 </ul>
 <p><b>Additions and Deletions</b></p>
