--- a/src/main/webapp/general/getting-started.html
+++ b/src/main/webapp/general/getting-started.html
@@ -21,8 +21,8 @@
    </li>
    <li><b>Sindarin</b>
    <ul>
+       <li>Dreamingfifi’s <i><a href="https://academy.realelvish.net/store/">A Fan’s Guide to Neo-Sindarin</a></i></li>
        <li>Thorsten Renk’s <i><a href="http://www.science-and-fiction.org/bookstore.html#pedin_edhellen">Pedin Edhellen</a></i></li>
-       <li>Dreamingfifi’s <i><a href="http://your-sindarin-textbook.realelvish.net">Your Sindarin Textbook</a></i></li>
        <li>Xandarien’s <i><a href="http://sindarinlessons.weebly.com/">Sindarin Lessons</a></i></li>
    </ul>
    </li>
