--- a/src/main/webapp/general/conceptual-history.html
+++ b/src/main/webapp/general/conceptual-history.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta><meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"></meta>
     <meta http-equiv="Content-Style-Type" content="text/css">
     <title>Eldamo : Conceptual History</title>
     <link rel="stylesheet" type="text/css" href="../css/global.css">
@@ -9,7 +9,7 @@
 <body>
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
-<h1>The Conceptual History of Elvish</h1>
+<h1>Conceptual History of Elvish</h1>
 <p>Tolkien worked on his Elvish languages through most of his life, constantly refining them. The linguistic elements defined by Tolkien as a young man were largely invalid in the languages as he conceived them when <i>The Lord of the Rings</i> was completed. This development was continuous and incremental, with later structures evolving from earlier ideas. Studying the early forms can provide many insights into the structure of the later forms of the languages.</p>
 <p>This lexicon divides the conceptual development of the Elvish languages into three broad periods: an Early Period from Tolkien’s early academic years (roughly 1910-1930), a Middle Period during which he worked on the initial drafts of <i>The Silmarillion</i> and <i>The Lord of the Rings</i> (1930-1950) and a Late Period in which he finalized <i>The Lord of the Rings</i> for publication and made further revisions on <i>The Silmarillion</i> (1950-1973).</p>
 <p>Some elements of Tolkien’s conception remained constant throughout his life. His primary focus was on two Elvish languages: a “High Elvish” language spoken by the Elves of Valinor and a “Common Elvish” language spoken in Middle Earth. The “High Elvish” language was originally inspired by Finnish, though it drifted far from its beginnings. The “Common Elvish” resembled Welsh in its grammar and phonology.</p>
