Various fixes for v0.6.2

--- a/src/main/webapp/general/conceptual-history.html
+++ b/src/main/webapp/general/conceptual-history.html
@@ -26,9 +26,9 @@
 </tr>
 <tr>
 <td><i>Rough Dates:</i></td>
-<td>1910-1930</td>
-<td>1930-1950</td>
-<td>1950-1973</td>
+<td>1910 - 1930</td>
+<td>1930 - 1950</td>
+<td>1950 - 1973</td>
 </tr>
 <tr>
 <td><i>First Tribe:</i></td>
@@ -92,7 +92,7 @@
 <p>In this period, the native tongues of the first and second tribes remained the two major Elvish languages, called Qenya and Noldorin. In his revised history of the Elves, Tolkien further developed the minor Elvish languages of the lost Elves who had never reached Valinor, particularly the Ilkorin language and its dialect Doriathrin. As defined at this stage, Ilkorin was spoken by the Elves of Beleriand, a group of Elves originally belonging to the third tribe, the Teleri. The Ilkorin Elves chose to stay behind when the other Elves left for Valinor because their king Thingol fell in love with Melian, a Maia living in Beleriand.</p>
 <p>The Ilkorin language was separated from the other Elvish tongues (Qenya, Noldorin and Telerin) for many centuries. In the revised stories, the exiled Noldor met these Ilkorin Elves when they left Valinor and their languages greatly influenced one another. As the more sophisticated Noldor became leaders of the Elves of Beleriand, the Noldorin language slowly displaced Ilkorin.</p>
 <p>In this new scenario, the Noldor brought knowledge of Qenya, the language of the first tribe, with them to Middle Earth. Qenya was not the native language for any of the Elves living in Middle Earth, but it became the language of scholars, surviving into later ages. This was the linguistic scenario when Tolkien started writing <i>The Lord of the Rings</i> in 1937. The “High Elvish” sung by Galadriel in the poem Namárië was not her native language, but was the scholarly tongue of the Elves of Valinor. For their part, the non-Noldorin Elves of western Middle Earth had mostly adopted Galadriel’s native tongue: Noldorin.</p>
-<p>It took twelve years for Tolkien to complete <i>The Lord of the Rings</i>, finishing in 1949. As he began editing the work for publication, he became dissatisfied with the origins of the Elvish languages. In the new stories, it less plausible that the language of the Noldor had diverged so much from that of other nearby Elves of Valinor. Why would the prideful Noldor put so much weight on Qenya, the language of the land they had left? Why would the Elves of Beleriand, often in conflict with the Noldor, adopt the Noldorin language and abandon their own?</p>
+<p>It took twelve years for Tolkien to complete <i>The Lord of the Rings</i>, finishing in 1949. As he began editing the work for publication, he became dissatisfied with the origins of the Elvish languages. In the new stories, it is less plausible that the language of the Noldor had diverged so much from that of other nearby Elves of Valinor. Why would the prideful Noldor put so much weight on Qenya, the language of the land they had left? Why would the Elves of Beleriand, often in conflict with the Noldor, adopt the Noldorin language and abandon their own?</p>
 <h2>The Late Period</h2>
 <ul>
 <li><b>Major Works:</b> the finished <i>Lord of the Rings</i>, later <i>Silmarillion</i> revisions</li>
