--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,12 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.6.2</p>
+<p>v0.6.3</p>
+<ul>
+<li>Began work on Neo-Eldarin vocabulary pages.</li>
+<li>Began evaluating roots for exclusion and inclusion in Neo-Eldarin.</li>
+</ul>
+<p>v0.6.2 (March 10, 2018)</p>
 <ul>
 <li>More tweaks for better mobile support.</li>
 <li>Wildcard searches (e.g. “si*f”).</li>
