--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,13 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.6.3</p>
+<p>v0.6.4</p>
+<ul>
+<li>Miscellaneous search fixes.</li>
+<li>First cut at classify Quenya verbs.</li>
+<li>More evaluating roots for exclusion and inclusion in Neo-Eldarin (E-G).</li>
+</ul>
+<p>v0.6.3 (April 6, 2018)</p>
 <ul>
 <li>Multi-match searches using “,” (OR) and “+” (AND).</li>
 <li>Began work on Neo-Eldarin vocabulary pages.</li>
