--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,11 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.6.4</p>
+<p>v0.6.5</p>
+<ul>
+<li>More evaluating roots for exclusion and inclusion in Neo-Eldarin (G-I).</li>
+</ul>
+<p>v0.6.4 (May 4, 2018)</p>
 <ul>
 <li>Miscellaneous search fixes.</li>
 <li>First cut at classify Quenya verbs.</li>
@@ -246,7 +250,7 @@ appears only in an older version of the language, this is also indicated in the 
 “slave, [ᴹQ.] thrall”.</p>
 <p>The Neo-Quenya and Neo-Sindarin word lists use the ⚠️  and ⛔️ symbols to indicate that some words are not recommended
 for new Elvish compositions, with alternate suggestions if they are available. In the data model, these recommendations
-are indicated by the &lt;deprecated&gt; element, with a @weak attribute to distinguish ⚠️ (weak) from ⛔️ (strong) 
+are indicated by the &lt;deprecated&gt; element, with a @strong attribute to distinguish ⚠️ (weak) from ⛔️ (strong) 
 recommendations. These “unrecommended words” are only my opinion, and can be ignored if desired. The ⚠️ symbol also
 appears in glosses for recommendation against using words with certain meanings. Even if there is no &lt;deprecated&gt;
 element, deleted and unglossed words are still marked ⛔️, and words that appear in a deleted section are marked ⚠️.
