--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,14 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.6.5</p>
+<p>v0.6.6</p>
+<ul>
+<li>More evaluating roots for exclusion and inclusion in Neo-Eldarin (I-???).</li>
+<li>Broke neologisms down by release, starting with v0.6.5.</li>
+<li>First pass at internationalized search: Russian, with help of Dmytro Yakymets (Дмитрий Якимец).</li>
+<li>Removed “⏳” symbol for unvetted neologisms since it wasn’t very helpful.</li>
+</ul>
+<p>v0.6.5 (June 2, 2018)</p>
 <ul>
 <li>More evaluating roots for exclusion and inclusion in Neo-Eldarin (G-I).</li>
 </ul>
