--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -13,9 +13,10 @@
 <p>v0.6.6</p>
 <ul>
 <li>More evaluating roots for exclusion and inclusion in Neo-Eldarin (I-???).</li>
+<li>Removed “⏳” symbol for unvetted neologisms since it wasn’t very helpful.</li>
 <li>Broke neologisms down by release, starting with v0.6.5.</li>
 <li>First pass at internationalized search: Russian, with help of Dmytro Yakymets (Дмитрий Якимец).</li>
-<li>Removed “⏳” symbol for unvetted neologisms since it wasn’t very helpful.</li>
+<li>Modified page-ids so they are permanent identifies and don’t change when the language or word is updated.</li>
 </ul>
 <p>v0.6.5 (June 2, 2018)</p>
 <ul>
